--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="polaroid">
-      <img src="imgs/it-me.jpg" />
+      <a href="#about_section"><img src="imgs/it-me.jpg" /></a>
     </div>
 
     <div class="projects">
@@ -73,7 +73,7 @@
         resume.pdf</a>
     </div>
 
-    <div class="about">
+    <div class="about" section id="about_section">
       <h1>
         Hi Hello! My name is Deniah. I'm a Designer who codes based in New York.
       </h1>
@@ -95,5 +95,8 @@
     <footer>
         website made by <a href="https://github.com/t00ns">Deniah</a>.
     </footer>
+
+
+    <script src="clickndrag.js"></script>
   </body>
 </html>
