--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
           <a href="#" target="_blank" rel="noopener noreferrer">Anthems</a>
         </li>
         <li>
-          <a href="#" target="_blank" rel="noopener noreferrer">Pollinate</a>
+          <a href="https://deniah.notion.site/Pollinate-Mobile-App-45d4697c2c8548969db943ee68081938" target="_blank" rel="noopener noreferrer">Pollinate</a>
         </li>
         <li>
-          <a href="#" target="_blank" rel="noopener noreferrer">t00ns Brush</a>
+          <a href="https://github.com/t00ns/t00n-brush" target="_blank" rel="noopener noreferrer">t00ns Brush</a>
         </li>
-        <li><a href="#" target="_blank" rel="noopener noreferrer">Aero</a></li>
+        <li><a href="https://deniah.notion.site/Aero-App-3073482b890549d487bca84bd373da76" target="_blank" rel="noopener noreferrer">Aero</a></li>
         <li>
-          <a href="#" target="_blank" rel="noopener noreferrer">GitHub</a>
+          <a href="https://github.com/t00ns" target="_blank" rel="noopener noreferrer">GitHub</a>
         </li>
-        <li><a href="#" target="_blank" rel="noopener noreferrer">Figma</a></li>
+        <li><a href="https://www.figma.com/@t00ns" target="_blank" rel="noopener noreferrer">Figma</a></li>
         <li>
-          <a href="#" target="_blank" rel="noopener noreferrer">Resume</a>
+          <a href="Deniah_Resume2021.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
         </li>
         <li>
-          <a href="#" target="_blank" rel="noopener noreferrer">Contact</a>
+          <a href="emailto:deniahcag@gmail.com" target="_blank" rel="noopener noreferrer">Contact</a>
         </li>
       </ul>
     </div>
