--- a/index.html
+++ b/index.html
@@ -77,15 +77,13 @@
       </h1>
 
       <h3>
-        <p>I'm just a human bean with a passion about the internet and
-        experimenting with data and code. I'm passionate about Slow Fashion and
-        finding ethical, sustainable solutions. I like creating things and
+        <p>I'm just a human bean with a passion about anything digital and design. I play around with data and code. I like creating things and
         solving problems for both work and fun. During my free time I play video
-        games or making another sweater vest.</p>
+        games.</p>
 
         <p>
         I'm available for freelance work, opportunities, collaborations, and
-        even connecting! Feel free to
+        even onnectingc! Feel free to
         <a href="mailto:deniahcag@gmail.com">message me</a>.</p>
       </h3>
     </div>
