commit to 'main'

--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
       </h1>
 
       <h3>
-        <p>I'm just a human bean with a passion about anything digital and design. I play around with data and code. I like creating things and
-        solving problems for both work and fun. During my free time I play video
-        games.</p>
+        <p>I'm just a human bean with a passion in digital and design. Playing around with data and code, I like creating things and
+        solving problems for work and fun. During my free time I play video
+        games or outside capturing moments of life on film (I'm fully vaxxed & waiting for the booster!).</p>
 
         <p>
-        I'm available for freelance work, opportunities, collaborations, and
-        even onnectingc! Feel free to
+        I'm available for freelance work, opportunities, and for coffee! Feel free to
         <a href="mailto:deniahcag@gmail.com">message me</a>.</p>
       </h3>
     </div>
 
     <footer>
         website made by <a href="https://github.com/t00ns" target="_blank" rel="noopener noreferrer">Deniah</a>.
+        <sub>... oh wait, thats me. (^-^ ) </sub>
     </footer>
 
 
