commit to 'main'

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
       <h3>
         <p>I'm just a human bean with a passion in digital and design. Playing around with data and code, I like creating things and
         solving problems for work and fun. During my free time I play video
-        games or outside capturing moments of life on film (I'm fully vaxxed & waiting for the booster!).</p>
-
+        games or outside capturing moments of life on film*. <sub>*(fully vaxxed and waiting for the booster!)</sub></p>
         <p>
         I'm available for freelance work, opportunities, and for coffee! Feel free to
         <a href="mailto:deniahcag@gmail.com">message me</a>.</p>
