--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="polaroid">
-      <a href="#about_section"><img src="imgs/it-me.jpg" /></a>
+      <a href="https://withkoji.com/@t00ns"><img t-msrc="imgs/ie.jpg" /></a>
     </div>
 
     
